# plotomatic

./: .gitignore  Cargo.toml
src/: graphics.rs  lib.rs  main.rs  output_writer.rs  polynomial_solver.rs  render.rs  render0.rs  render2.rs  render3.rs  render4.rs  render5.rs  render6.rs  render7.rs  render8.rs  vector_graphics.rs
