[package]
name = "draw2d"
version = "0.1.0"
edition = "2021"

[dependencies]
ngeom = { path = "../ngeom/crates/ngeom" }
ngeom-polygon = { path = "../ngeom/crates/ngeom-polygon" }
enum_dispatch = "0.3.13"
env_logger = "0.10"
log = "0.4"
wgpu = "23.0"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
image = "0.25.5"
bytemuck = { version = "1.20", features = [ "derive" ] }
rayon = "1.10.0"
tempfile = "3.14.0"
base64 = "0.22.1"
ahash = "0.8.11"
